syntax = "proto3";

package raft;

service RaftService {
  rpc VoteRequest(RaftRequest) returns (RaftResponse) {}
  rpc Heartbeat(Empty) returns (Empty) {}
}

message RaftRequest {
  string message = 1;
}

message RaftResponse {
  string message = 1;
}

message Empty {

}